Allow SDL driver to use a 8-bit color palette
Allow SDL driver force window size
Allow DESTDIR environment varieble on make install step
Allow to accelerate loading and saving of diskette, microdrive, etc
Added config setting for autoenable ay chip on Spectrum models without ay chip
Added lightgun scope

Improved ZX Vision:
- Added new Top Menu (not enabled by default)
- Reordered settings & new menu: check settings -> Emulated Display, General, Main Window, ZX Vision
- Added shortcuts helper action to create icon to trigger recorded keys

Improved ZX Desktop:
- Allow to set small values for ZX Desktop width size
- Add setting to disallow enabling ZX Desktop
- Allow to change background color for icons, lower and upper buttons
- Added setting to add a stroke on icons

Improved editing joystick to events/keys (allow to unasign easily)
Improved ZX Life: allow to speed up game, fix behaviour on board limits
Improved Trash icon
Improve code to allow compilation on other Unix systems, like AROS, FiwixOS, Sortix
Improved debug cpu:
- Show when registers values are modified by last opcode execution
- Views 5 and 6 use a different memptr ("memptx")
- Show when memory is modified by last opcode execution on views 5 and 6
- Direct key (t) to evaluate expressions
- Added user variables VAR0, VAR1, ... VAR9

Fixed emulation of Magnum Light Phaser
Fixed reading port BFFD on Spectrum +2A/+3
Fixed loading tape with --tape and --realtape and autoload snapshot on start
Fixed uncompress tar and rar files with spaces in name
Fixed default timer on Mac OS X when not using cocoa driver
Fixed non-pthreads compilation
Fixed possible divide by 0 when getting bad cpu usage on Linux

----



ZEsarUX 12.1 - Night Shift edition. 25 September 2025

* New things added:

Added Streaming mode to ZENG Online for ZX Spectrum. It improves gaming experience: reduces lag and drops all game state inconsistencies between all players