@@ -9,6 +9,7 @@ Permitir al driver SDL forzar el tamaño de la ventana
 Permitir variable de entorno DESTDIR en el paso make install
 Permitir acelerar carga y grabación de diskette, microdrive, etc
 Agregada opción de configuración para autoactivar chip AY en modelos de Spectrum sin chip ay
+Agregado emulación de Stack Light Rifle
 Agregada mirilla de lightgun
 
 Mejorado ZX Vision:
