@@ -184,7 +184,7 @@
 
 * Emulación de ZX Printer
 
-* Emulación de Lightgun: Emula Gunstick de MHT Ingenieros S.L y Magnum Light Phaser
+* Emulación de Lightgun: Emula Gunstick de MHT Ingenieros S.L, Magnum Light Phaser y Stack Light Rifle
 
 * Emulación Kempston mouse
 
